[package]
name = "cbdock"
version = "0.1.1"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["multipart", "cookies", "stream"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["codec"] }
regex = "1.10"
walkdir = "2.4"
chrono = "0.4"
